--- a/newLogin.html
+++ b/newLogin.html
@@ -220,6 +220,8 @@
               loginSuccessBanner.style.display = "none";
               document.getElementById("loginEmail").value = "";
               document.getElementById("loginPassword").value = "";
+               window.location.href = "./index.html";
+
             }, 3000);
           } else {
             loginDeclineBanner.style.display = "block";
